# xhGen

./: Cargo.toml
packaging/: crosshair-gen.desktop
resources/csv-defaults/: unique_crosshair_color_pairs.csv
src/: main.rs
